# openai_codex

./: MODULE.bazel
codex-rs/: Cargo.toml
codex-rs/app-server/: README.md
codex-rs/app-server-protocol/schema/json/: ClientRequest.json  codex_app_server_protocol.schemas.json  codex_app_server_protocol.v2.schemas.json
codex-rs/app-server-protocol/src/protocol/: common.rs  v2.rs
codex-rs/config/src/: config_toml.rs
codex-rs/core/: config.schema.json
codex-rs/core/src/: client.rs  client_tests.rs  codex.rs  codex_tests.rs  mcp_tool_call_tests.rs
codex-rs/core/src/config/: config_tests.rs
codex-rs/core/tests/suite/: client.rs
codex-rs/exec-server/src/: file_system.rs
codex-rs/exec-server/tests/: file_system.rs
codex-rs/realtime-webrtc/: BUILD.bazel  Cargo.toml  webrtc-sys_linux_without_pkg_config.patch
codex-rs/realtime-webrtc/src/: lib.rs
codex-rs/tools/src/: json_schema.rs  tool_registry_plan_tests.rs
codex-rs/tui/src/: app.rs  app_event.rs  chatwidget.rs  lib.rs
codex-rs/tui/src/chatwidget/: realtime.rs
codex-rs/tui/src/chatwidget/tests/: helpers.rs  popups_and_settings.rs  slash_commands.rs
