[package]
name = "codex-realtime-webrtc"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_realtime_webrtc"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
libwebrtc = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
